# docaligner-nicegui

./: .gitignore  README.md  main.py  pyproject.toml  webcam_nicegui_WS.code-workspace
docs/: 251127_184511_cursor_.md
libs/: errors.py  img_processer.py  utils.py
static/: webcam.js
