[project]
name = "webcam-nicegui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "docaligner-docsaid>=1.1.0",
    "loguru>=0.7.3",
    "nicegui>=3.3.1",
    "onnxruntime>=1.18.0",
    "opencv-python>=4.0",
    "scikit-image>=0.25.2",
]
